update container and mfe1

--- a/container/public/index.html
+++ b/container/public/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+    <title>Container</title>
+</head>
 <body>
 
     <h1>Container</h1>
 
     <p>This is container</p>
     <div id="container">
-        <div id="mfe1"></div>
+        <div id="mfe1_app"></div>
     </div>
 
 </body>
