--- a/container/public/index.html
+++ b/container/public/index.html
@@ -4,12 +4,15 @@
     <title>Container</title>
 </head>
 <body>
-
+    <nav>
+        <ul>
+            <i><a href="/mfe1">MFE1</a></i>
+            <i><a href="/mfe2">MFE2</a></i>
+        </ul>
+    </nav>
     <h1>Container</h1>
-
-    <p>This is container</p>
-    <div id="container">
-        <div id="mfe1_app"></div>
+    
+    <div id="root">
     </div>
 
 </body>
