Update to hash locate

--- a/container/public/index.html
+++ b/container/public/index.html
@@ -6,8 +6,8 @@
 <body>
     <nav>
         <ul>
-            <i><a href="/mfe1">MFE1</a></i>
-            <i><a href="/mfe2">MFE2</a></i>
+            <i><a href="#/mfe1">MFE1</a></i>
+            <i><a href="#/mfe2">MFE2</a></i>
         </ul>
     </nav>
     <h1>Container</h1>
